Clarify sink/hub notes with octave context in About section

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
             <p>Titon analyzed early blues recordings and mapped how melodies move between notes. This network captures those patterns, including:</p>
             <ul>
                 <li><strong>Quarter-tones</strong> &mdash; The "blue third" (E quarter-flat) sits between E&#9837; and E</li>
-                <li><strong>Sink notes</strong> &mdash; C is a resolution point with no outgoing paths</li>
-                <li><strong>Hub notes</strong> &mdash; G connects to the most destinations</li>
+                <li><strong>Sink note</strong> &mdash; c (lower octave) is the only resolution point with no outgoing paths</li>
+                <li><strong>Hub note</strong> &mdash; g connects to the most destinations (6 notes)</li>
             </ul>
 
             <h3>How to Use</h3>
