Add stanza position indicator UI for testing Phase 2
Visual indicator shows:
- Three lines with phrases (a-f)
- Current phrase highlighted
- Completed phrases marked
- Current line highlighted
- Stanza number and step counter
- Harmony context (I, IV-I, V-I)

Makes it easy to see the 12-bar structure as you click "Next".

--- a/index.html
+++ b/index.html
@@ -132,6 +132,32 @@
             <div class="history-notes" id="history"></div>
         </div>
 
+        <!-- Phase 2: Stanza Position Indicator -->
+        <div class="stanza-indicator" id="stanzaIndicator">
+            <div class="stanza-line" data-line="1">
+                <span class="line-label">Line 1</span>
+                <span class="line-harmony">I</span>
+                <span class="phrase-box" data-phrase="a">a</span>
+                <span class="phrase-box" data-phrase="b">b</span>
+            </div>
+            <div class="stanza-line" data-line="2">
+                <span class="line-label">Line 2</span>
+                <span class="line-harmony">IV-I</span>
+                <span class="phrase-box" data-phrase="c">c</span>
+                <span class="phrase-box" data-phrase="d">d</span>
+            </div>
+            <div class="stanza-line" data-line="3">
+                <span class="line-label">Line 3</span>
+                <span class="line-harmony">V-I</span>
+                <span class="phrase-box" data-phrase="e">e</span>
+                <span class="phrase-box" data-phrase="f">f</span>
+            </div>
+            <div class="stanza-progress">
+                <span class="stanza-label">Stanza <span id="stanzaNumber">1</span></span>
+                <span class="phrase-step">Step <span id="phraseStep">0</span>/<span id="phraseSteps">8</span></span>
+            </div>
+        </div>
+
         <div class="description-wrapper">
             <p class="description">
                 Randomly walk through Jeff Todd Titon's pitch network from
