Add Phrasing and Auto Harmony toggles, clickable history
- Phrasing toggle: gate repetition, cadence bias, phrase-start lift
- Auto Harmony toggle: chords follow phrase position automatically
- Phrase e split: V → IV (50% probability at 50%)
- Phrase f split: I → V → I (35% probability, 60% point)
- Cadence harmony lock: last 2 notes of b/d/f force I
- Clickable history notes with hover effect
- MM-C-01 cadence bias only applies to b/d/f, last 2 notes
- Phrase-start lift only applies to a/b/e (not repeated phrases)

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
 
         <!-- Phase 2: Stanza Position Indicator -->
         <div class="stanza-indicator" id="stanzaIndicator">
+            <div class="stanza-toggles">
+                <div class="stanza-toggle">
+                    <input type="checkbox" id="phrasingToggle" checked>
+                    <label for="phrasingToggle">Phrasing</label>
+                </div>
+                <div class="stanza-toggle">
+                    <input type="checkbox" id="autoHarmonyToggle">
+                    <label for="autoHarmonyToggle">Auto Harmony</label>
+                </div>
+            </div>
             <div class="stanza-line" data-line="1">
                 <span class="line-label">Line 1</span>
                 <span class="line-harmony">I</span>
