--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
         <!-- Phase 2: Stanza Position Indicator -->
         <div class="stanza-indicator" id="stanzaIndicator">
+            <span class="stanza-box-label">Stanza <span id="stanzaNumber">1</span></span>
             <div class="stanza-toggles">
                 <div class="stanza-toggle">
                     <input type="checkbox" id="phrasingToggle" checked>
@@ -163,7 +164,6 @@
                 <span class="phrase-box" data-phrase="f">f</span>
             </div>
             <div class="stanza-progress">
-                <span class="stanza-label">Stanza <span id="stanzaNumber">1</span></span>
                 <span class="phrase-step">Step <span id="phraseStep">0</span>/<span id="phraseSteps">8</span></span>
             </div>
         </div>
