Move Auto Harmony outside stanza box, require phrasing

--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
             <div class="history-notes" id="history"></div>
         </div>
 
+        <!-- Auto Harmony Toggle (outside stanza box, requires phrasing) -->
+        <div class="auto-harmony-toggle">
+            <input type="checkbox" id="autoHarmonyToggle">
+            <label for="autoHarmonyToggle">Auto Harmony</label>
+        </div>
+
         <!-- Phase 2: Stanza Position Indicator -->
         <div class="stanza-indicator" id="stanzaIndicator">
             <span class="stanza-box-label">Stanza <span id="stanzaNumber">1</span></span>
@@ -139,10 +145,6 @@
                 <div class="stanza-toggle">
                     <input type="checkbox" id="phrasingToggle" checked>
                     <label for="phrasingToggle">Phrasing</label>
-                </div>
-                <div class="stanza-toggle">
-                    <input type="checkbox" id="autoHarmonyToggle">
-                    <label for="autoHarmonyToggle">Auto Harmony</label>
                 </div>
             </div>
             <div class="stanza-line" data-line="1">
