--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
             <div class="history-notes" id="history"></div>
         </div>
 
-        <!-- Auto Harmony Toggle (outside stanza box, requires phrasing) -->
-        <div class="auto-harmony-toggle">
-            <input type="checkbox" id="autoHarmonyToggle">
-            <label for="autoHarmonyToggle">Auto Harmony</label>
+        <!-- Phrasing toggles (outside stanza box) -->
+        <div class="phrasing-toggles">
+            <div class="phrasing-toggle">
+                <input type="checkbox" id="phrasingToggle" checked>
+                <label for="phrasingToggle">Phrasing</label>
+            </div>
+            <div class="phrasing-toggle">
+                <input type="checkbox" id="autoHarmonyToggle">
+                <label for="autoHarmonyToggle">Auto Harmony</label>
+            </div>
         </div>
 
         <!-- Phase 2: Stanza Position Indicator -->
         <div class="stanza-indicator" id="stanzaIndicator">
             <span class="stanza-box-label">Stanza <span id="stanzaNumber">1</span></span>
-            <div class="stanza-toggles">
-                <div class="stanza-toggle">
-                    <input type="checkbox" id="phrasingToggle" checked>
-                    <label for="phrasingToggle">Phrasing</label>
-                </div>
-            </div>
             <div class="stanza-line" data-line="1">
                 <span class="line-label">Line 1</span>
                 <span class="line-harmony">I</span>
