--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
                 <input type="checkbox" id="autoHarmonyToggle">
                 <label for="autoHarmonyToggle">Auto Harmony</label>
             </div>
+            <div class="phrasing-toggle">
+                <label for="harmonyModeSelect">Mode:</label>
+                <select id="harmonyModeSelect" class="harmony-mode-select">
+                    <option value="functional" selected>Full I-IV-V</option>
+                    <option value="root-only">Root Only</option>
+                    <option value="static-i">Static I</option>
+                </select>
+            </div>
         </div>
 
         <!-- Phase 2: Stanza Position Indicator -->
