Change phrase labels to 'phrase a', 'phrase b', etc.

--- a/index.html
+++ b/index.html
@@ -158,20 +158,20 @@
             <div class="stanza-line" data-line="1">
                 <span class="line-label">Line 1</span>
                 <span class="line-harmony">I</span>
-                <span class="phrase-box" data-phrase="a">a</span>
-                <span class="phrase-box" data-phrase="b">b</span>
+                <span class="phrase-box" data-phrase="a">phrase a</span>
+                <span class="phrase-box" data-phrase="b">phrase b</span>
             </div>
             <div class="stanza-line" data-line="2">
                 <span class="line-label">Line 2</span>
                 <span class="line-harmony">IV-I</span>
-                <span class="phrase-box" data-phrase="c">c</span>
-                <span class="phrase-box" data-phrase="d">d</span>
+                <span class="phrase-box" data-phrase="c">phrase c</span>
+                <span class="phrase-box" data-phrase="d">phrase d</span>
             </div>
             <div class="stanza-line" data-line="3">
                 <span class="line-label">Line 3</span>
                 <span class="line-harmony">V-IV-I</span>
-                <span class="phrase-box" data-phrase="e">e</span>
-                <span class="phrase-box" data-phrase="f">f</span>
+                <span class="phrase-box" data-phrase="e">phrase e</span>
+                <span class="phrase-box" data-phrase="f">phrase f</span>
             </div>
             <div class="stanza-progress">
                 <span class="phrase-step">Step <span id="phraseStep">0</span>/<span id="phraseSteps">8</span></span>
